# digital-store

./: .env.example  .gitignore  README.md  main.py  manage.py  pyproject.toml  settings.yaml
catalogue/: admin.py  apps.py  dao.py  dto.py  models.py
catalogue/migrations/: 0033_mastercatalogsync_masterprice_masterpricehistory_and_more.py  0034_masterprice_applied_exchange_rate_and_more.py  0035_masterprice_source_stock_record_and_more.py  0036_alter_mastercatalogsync_status_and_more.py
catalogue/reviews/: apps.py
core/: admin.py  apps.py  dao.py  dto.py  models.py  translation.py
core/management/commands/: init_currencies.py  start.py
core/migrations/: 0001_initial.py
currencies/: admin.py  apps.py  dao.py  dto.py  models.py  tasks.py
currencies/migrations/: 0001_initial.py  0002_alter_currencyratesourcecredential_api_key_and_more.py  0002_remove_exchangeratehistory_idx_rate_history_pair_date_and_more.py  0003_alter_currencyratesource_source_type_and_more.py  0003_alter_exchangerate_rate_datetime_and_more.py  0004_currencyratesource_api_extra_config.py  0005_alter_exchangerate_rate_and_more.py
currencies/tests/: conftest.py  test_dao.py  test_dto.py  test_models.py  test_tasks.py
digital_store/: asgi.py  secrets.yaml  settings.py  settings_test.py  urls.py  wsgi.py
helpers/: arithmetic.py
partner/: __init__.py  admin.py  apps.py  availability.py  exceptions.py  importers.py  models.py  prices.py  strategy.py  views.py
suppliers/: admin.py  apps.py  dto.py  models.py  signals.py  tasks.py
suppliers/migrations/: 0001_initial.py  0002_alter_supplierstockhistory_price_after_and_more.py  0003_alter_suppliercatalogsync_options_and_more.py  0004_alter_supplier_sync_method_and_more.py
suppliers/service/: base.py  dao.py  dto.py  factory.py  sync.py
suppliers/services/: base.py  sync.py
tests/: conftest.py
tests/catalogue/: test_dao.py
tests/core/: test_dao.py
tests/currencies/: test_dao.py  test_dto.py  test_models.py  test_tasks.py
tests/suppliers/: test_dao.py  test_dto.py  test_models.py  test_service_base.py  test_service_sync.py  test_tasks.py
