[project]
name = "digital-store"
version = "0.1.0"
description = "Digital store"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Django==5.2.12",
    "django-oscar==4.1",
    "djangorestframework==3.16.1",
    "django-modeltranslation==0.19.19",
    "django-fernet-encrypted-fields==0.3.1",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
    "Pillow>=11.0",
    "django-widget-tweaks>=1.5",
    "django-haystack>=3.3",
    "sorl-thumbnail>=12.11",
    "django-treebeard>=4.7",
    "django-tables2>=2.7",
]

[dependency-groups]
prod = [
    "celery==5.6.2",
    "gunicorn>=23.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "django-debug-toolbar>=6.0",
]

[tool.uv]
default-groups = ["dev"]