[project]
name = "digital-store"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "Django==5.2.12",
    "django-oscar==4.1",
    "djangorestframework==3.16.1",
    "django-modeltranslation==0.19.19",
    "django-fernet-encrypted-fields==0.3.1",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
    "Pillow>=11.0",
    "django-widget-tweaks>=1.5",
    "django-haystack>=3.3",
    "sorl-thumbnail>=12.11",
    "django-treebeard>=4.7",
    "django-tables2>=2.7",
    "pydantic>=2.12.5",
    "httpx>=0.28",
]

[dependency-groups]
prod = [
    "celery==5.6.2",
    "gunicorn>=25.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "django-debug-toolbar>=6.0",
    "ruff>=0.15.6",
]

[project.scripts]
run-prod = "gunicorn digital_store.wsgi:application --bind 127.0.0.1:8000 --workers 4 --threads 2 --timeout 120 --graceful-timeout 30 --max-requests 1000 --max-requests-jitter 100 --access-logfile - --error-logfile -"

[tool.uv]
package = true
default-groups = ["dev"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".venv",
    "migrations",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long — контролируется форматтером
]

[tool.ruff.lint.isort]
known-first-party = ["core", "suppliers", "currencies", "catalogue", "partner"]

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "digital_store.settings_test"
pythonpath = ["."]
addopts = "--reuse-db"  # ← Не пересоздавать БД каждый раз
