# pyproject.toml

[project]
name = "digital-store"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2", 
    "django-oscar>=4.1,<5.0",
    "djangorestframework>=3.16.1,<4.0",
    "django-modeltranslation>=0.19.19,<1.0",
    "django-fernet-encrypted-fields>=0.3.1,<1.0",
    "sorl-thumbnail>=12.11.0,<13.0",
    "whitenoise>=6.12.0,<7.0",
    
    "psycopg[binary]>=3.3.3,<4.0",
    "pydantic>=2.12.5,<3.0",
    "httpx>=0.28.1,<1.0",
    "dynaconf[yaml]>=3.2.13,<4.0",
    "gunicorn>=25.1.0,<26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "django-debug-toolbar>=6.0",
    "ruff>=0.15",
    "pytest-env>=1.6.0",
]

[tool.uv]
default-groups = ["dev"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".venv",
    "migrations",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long — контролируется форматтером
]

[tool.ruff.lint.isort]
known-first-party = ["core", "suppliers", "currencies", "catalogue", "partner"]

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "digital_store.settings"
env = [
    "ENV_FOR_DYNACONF=tests.local",
]
pythonpath = ["."]
addopts = "--reuse-db"  # ← Не пересоздавать БД каждый раз
